Remove X-Profile-id
